# CS2_Sampaguita_Sapinosa

./: .gitignore  main.py
db/: connection.py  init_db.py
services/: pickup_service.py  user_systems.py
waste_system/: .env.example  .env.production  Procfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  startup.py
waste_system/core/: admin.py  api.py  api_urls.py  forms.py  models.py  serializers.py  urls.py  views.py
waste_system/core/migrations/: 0001_initial.py  0002_initial.py
waste_system/dashboard/: urls.py  views.py
waste_system/db/: connection.py  init_db.py  schema.sql
waste_system/services/: pickup_service.py  user_service.py
waste_system/templates/: base.html
waste_system/templates/core/: pickup_list.html
waste_system/templates/dashboard/: dashboard.html
waste_system/templates/users/: login.html  register.html
waste_system/ui/: app.py
waste_system/users/: admin.py  forms.py  models.py  urls.py  views.py
waste_system/users/migrations/: 0001_initial.py
waste_system/utils/: audit.py  validation.py
waste_system/waste_management/: asgi.py  settings.py  urls.py  wsgi.py
